<resources>
    <string name="app_name">MyFamily</string>
    <string name="sos_text">SOS</string>
    <string name="guard_text">Guard</string>
    <string name="sos_text_description">In case of emergency, keep telling family members to contact me.</string>
    <string name="guard_text_description">Open when you are on a potentially dangerous journey.</string>
    <string name="text_security">Security</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="guard">Guard</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="profile_title">Profile</string>
    <string name="user1_name_alfaz_kherani">Alfaz Kherani</string>
    <string name="alfaz_kherani">Alfaz Kherani</string>
    <string name="address">B/901, President Tower, Nr. Tulip Hospital,Ram Chowk,Surat-395007.</string>
    <string name="invite">INVITE</string>
    <string name="alfaz">Alfaz</string>
    <string name="invite_family_member">Invite Family Member</string>
    <string name="security">Security</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id_auth">498824890988-9jd4kpk02remgngmkc33vp7f7ejl610t.apps.googleusercontent.com</string>
    <string name="invite_mail_description">Enter email of a family member</string>
    <string name="invite_button">INVITE</string>
    <string name="invite_requests">Invite Requests :</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
</resources>